# fastapi-freecodecamp

backend/: pyproject.toml
backend/app/: config.py  main.py  schema.py
backend/env-windows/: pyvenv.cfg
backend/env-windows/Scripts/: activate  activate.bat
